--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,7 @@
 /*global*/
 .container{
     width: 96%;
-    padding-top: 5px;
+    padding-top: 20px;
     padding-bottom: 5px;
     margin: auto;
 }
@@ -19,39 +19,429 @@ li,
 a,
 form{
     text-decoration: none;
-    display: inline;
+    display: inline-block;
+    margin-left: 5px;
+    margin-right: 5px;
+    font-size: 12px;
+    color: rgb(100, 100, 100);
+}
+p{
+    line-height: 1.6;
+   
+}
+li:hover{
+    cursor: pointer;
 }
 /*header*/
-header{
-    height: 60px;
-}
-header .logo,
-header .search-box{
-    display: inline;  
+header .logo{
+    display: inline;
 }
 header .logo img{
-    width: 92px;
+    width: 90px;
     height: 30px;
-    margin-top: 35px;
-    margin-right: 10px;
+    margin-bottom: -12px;
 }
-header .search-box form{
-    margin: 0px 10px 20px 10px;
+header .search-box{
+    display: inline;
+}
+header .search-box input[type="text"]{
+    width: 650px;
+    height: 40px;
+    border-radius: 40px;
+}
+header .search-box button[type=submit]{
+    width: 30px;
+    height: 30px;
+    border-width: 0;
+    position: absolute;
+    margin-top:5px;
+    margin-left: -45px;
+    background-color: white;
+}
+header .search-box button[type=submit]:hover{
+    cursor: pointer;
 }
 header .nav-icons{
     float: right;
+    margin-top: 15px;
+}
+/*nav*/
+nav{
+    border-bottom-color: aquamarine;
+    border-bottom-width: 1px;
+    border-bottom-style: solid;
+}
+nav .main-container,
+footer .main-container,
+main .main-container{
+    width: 650px;
+    margin-left:120px;
+}
+nav .current{
+    color: blue;
+    border-bottom-color: blue;
+    border-bottom-width: 3px;
+    border-bottom-style: solid;
+}
+nav .left-navbar{
+    display:inline;
+}
+nav .right-navbar{
+    float: right;
+}
+nav .main-container li{
+    margin-top: 20px;
+    margin-bottom: 0px;
+    text-align: center;
+    width: 55px;
+    height: 20px;
+    padding-bottom: 10px;
+}
+/*main*/
+main{
+    color: gray;
+    margin-bottom: 30px;
 }
 
-.search-box{
-    width: 60px;
+main .results-stats{
+    color:gray;
+    font-size: 12px;
+    margin: 18px 5px 10px 20px;
 }
-.search-box input[type="text"]{
-    width: 400px;
-    height: 40px;
-    border-radius: 50px;
+main .webpage-box{
+    margin: 25px 5px 10px 20px;
 }
-.search-box button{
-    width: 40px;
-    height: 40px;
-    border-width: 0;  
+main  .web-description{
+    color: blue;
+    font-size: 16px;
+    margin-bottom: 3px;
+    margin-left: 0px;
+    display: block;
+}
+main .web-link{
+    color: green;
+    font-size: 12px;
+    margin-bottom: 5px;
+    margin-left: 0px;
+}
+main .web-content{
+    font-size: 12px;
+    color: rgb(100, 100, 100);
+}
+main .web-content .keyword{
+    color: black;
+    font-size: 12px;
+}
+main .web-search-bar{
+    margin: 15px 0px 15px 15px;
+}
+main .web-search-bar input[type="text"]{
+    width: 550px;
+    height: 30px;
+    padding-left: 5px;
+    border-radius: 0px;
+    border-width: 1px;
+}
+main .web-search-bar button[type="submit"]{
+    width: 50px;
+    height: 32px;
+    float: right;
+    border-radius: 0px;
+    border-width: 1px;
+    background-color: whitesmoke;
+}
+main .web-url-container{
+    margin-bottom: 20px;
+
+}
+main .web-url-box{
+     width: 250px;
+     display: inline-block;
+     margin: 10px 25px;
+ }
+ main .ask-box{
+     border-width: 1px;
+     border-style: solid;
+     border-color: aquamarine;
+ }
+ main .also-ask{
+     font-size: 20px;
+     padding: 10px;
+ }
+
+main .question{
+    border-top-color: aquamarine;
+    border-top-width: 1px;
+    border-top-style: solid;
+    padding: 5px;
+    padding-left: 10px;
+    color: black;
+}
+main .question button{
+    float: right;
+}
+main .feedback-link{
+    display: block;
+    text-align: right;
+    padding: 6px 15px 6px 15px;
+    font-size: 12px;
+    margin-bottom: 25px;
+}
+main img[src="images/twitter-icon.png"]{
+    width: 20px;
+    height: 15px;
+    padding-left: 8px;
+}
+main .twitts-container{
+    height: 280px;
+}
+main .twitt-box{
+    float: left;
+    font-size: 12px;
+    border-width: 1px;
+    border-color: aquamarine;
+    border-style: solid;
+    border-radius: 8px;
+    width: 175px;
+    height: 240px;
+    padding: 15px;
+    margin-left: 4px;
+    margin-right: 4px;
+    position: relative;
+}
+main .twitt-upload-time{
+    position: absolute;
+    bottom: 10px;
+
+}
+main .twitt-box .link{
+    color: darkcyan;
+}
+main .view-on-twitter{
+    display: block;
+    font-size: 12px;
+    color: blue;
+    margin: 0 15px 40px 15px;
+    height: 20px;
+}
+main .view-on-twitter span{
+    padding-left: 8px;
+}
+main .view-on-twitter button{
+    width: 30px;
+    height: 20px;
+    float:left;
+    color: blue;
+}
+main .searches-related-box{
+    margin: 25px 5px 30px 20px;
+}
+main .searches-related-box p{
+    color: black;
+    font-size: 16px;
+    margin: 10px 0 10px 0;
+}
+main .searches-related-box td{
+    font-size: 12px;
+    color: blue;
+    padding: 0 50px 10px 0;
+}
+main .page-nav{
+    width: 280px;
+    margin: auto;
+}
+main .page-nav td{
+    width: 16px;
+    height: 32px;
+    font-size: 12px;
+}
+main .page-number{
+    margin-left: 2px;
+}
+main .letter-o-red{
+    width: 16px;
+    height: 32px;
+    background: url("../images/google-icons-pack.png") -23px -240px;
+}
+main .letter-o-yellow{
+    width: 16px;
+    height: 32px;
+    background: url("../images/google-icons-pack.png") -39px -240px;
+}
+main .letter-G-blue{
+    width: 22px;
+    height: 32px;
+    background: url("../images/google-icons-pack.png") 0px -240px;
+    margin-bottom: 15px;
+}
+main .word-gle{
+    width: 36px;
+    height: 32px;
+    background: url("../images/google-icons-pack.png") -56px -240px;
+}
+main .arrow-icon{
+    width: 10px;
+    height: 32px;
+    background: url("../images/nav_logo.png") 9px 0;
+    margin-left: 50px;
+}
+main .page-next{
+    margin-left: 40px;
+}
+main .current-page{
+    color: black;
+}
+main .web-description:hover,
+main .feedback-link:hover{
+    text-decoration: underline;
+}
+main .question button:hover{
+    cursor: pointer;
+}
+main .twitt-box .link:hover,
+main .view-on-twitter:hover,
+main .searches-related-box td:hover
+{
+    color: blue;
+    text-decoration: underline;
+    cursor: pointer;
+}
+main .page:hover{
+    text-decoration: underline;
+    cursor: pointer;
+}
+main{
+    position: relative;
+}
+main .main-container{
+    display: inline-block;
+}
+
+/*aside*/
+aside{
+    position: absolute;
+    top: 0;
+    display: inline-block;
+    margin: 60px;
+}
+aside .wikipedia-article{
+    width: 450px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: aquamarine;
+    padding: 0px 15px;
+}
+aside .wikipedia-article .container{
+    padding-top: 60px;
+    width: 280px;
+    margin: 0;
+}
+aside .wikipedia-heading .material-icons{
+    float: right;
+}
+aside .wikipedia-heading{
+    position: relative;
+    height: 170px;
+}
+aside img[src="images/github-icon.png"]{
+    position: absolute;
+    left: 295px;
+    top: 5px;
+    float: right
+}
+aside .planet-icon{
+    float:left;
+    width: 16px;
+    height: 16px;
+    background: url("../images/nav_logo.png") -29px 82px;
+    margin-right: 20px;
+}
+aside .wikipedia-link a{
+    display: block;
+    color: blue;
+}
+aside .wikipedia-link{
+    border-top-color: aquamarine;
+    border-top-width: 1px;
+    border-top-style: solid;
+    padding-top: 10px;
+    padding-bottom: 10px;
+
+}
+aside .wikipedia-content{
+    border-top-color: aquamarine;
+    border-top-width: 1px;
+    border-top-style: solid;
+    align-content: left;
+}
+aside .link{
+    color:blue;
+}
+aside .information{
+    font-size: 12px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+
+}
+aside .people-also{
+    color:black;
+    display: inline;
+}
+aside .view-more{
+    float: right;
+}
+aside .other-websites-container{
+   padding-top: 5x;
+   padding-bottom: 10px;
+   font-size: 12px;
+}
+aside .another-website-box{
+    display: inline-block;
+    width: 85px;
+}
+aside .disclaimer{
+    display: inline;
+    font-size: 12px;
+}
+aside .feedback{
+    float: right;
+    font-size: 12px;
+}
+aside .knowledge-panel{
+    font-size: 12px;
+    color: black;
+    border: 1px solid aquamarine;
+    border-radius: 20px;
+    padding : 8px;
+    width: 210px;
+}
+aside .knowledge-panel img{
+    width: 24px;
+    height: 20px;
+    margin-bottom: -5px;
+}
+/*footer*/
+footer{
+    width: 100%;
+    background-color: lightcyan;
+    font-size: 12px;
+}
+footer .row{
+    border-top: 1px solid aquamarine;
+    padding: 12px;
+}
+footer .country{
+    display: inline;
+    margin-left: 5px;
+}
+footer .location{
+    float: right;
+}
+footer .location .material-icons{
+    font-size: 12px;
+    padding-right: 3px;
+    color: red;
+}
+footer li{
+    padding-right: 10px;
 }
