--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,3 @@
-
 /*reset default settings*/
 *{
     margin: 0;
@@ -27,7 +26,6 @@ form{
 }
 p{
     line-height: 1.6;
-   
 }
 li:hover{
     cursor: pointer;
@@ -35,6 +33,9 @@ li:hover{
 /*header*/
 header .logo{
     display: inline;
+}
+header .container{
+    height: 42px;
 }
 header .logo img{
     width: 90px;
@@ -45,18 +46,20 @@ header .search-box{
     display: inline;
 }
 header .search-box input[type="text"]{
-    width: 650px;
+    width: 590px;
     height: 40px;
+    border: 1px solid aquamarine;
     border-radius: 40px;
+    padding: 0px 50px 0px 10px;
 }
 header .search-box button[type=submit]{
-    width: 30px;
-    height: 30px;
-    border-width: 0;
+    width: 36x;
+    height: 36px;
+    border: 0;
     position: absolute;
-    margin-top:5px;
-    margin-left: -45px;
     background-color: white;
+    margin-top: 5px;
+    margin-left: -50px
 }
 header .search-box button[type=submit]:hover{
     cursor: pointer;
@@ -64,6 +67,12 @@ header .search-box button[type=submit]:hover{
 header .nav-icons{
     float: right;
     margin-top: 15px;
+}
+header .nav-icons li{
+    margin: 0;
+}
+header .nav-icons .material-icons{
+    font-size: 30px;
 }
 /*nav*/
 nav{
@@ -102,7 +111,6 @@ main{
     color: gray;
     margin-bottom: 30px;
 }
-
 main .results-stats{
     color:gray;
     font-size: 12px;
@@ -123,6 +131,10 @@ main .web-link{
     font-size: 12px;
     margin-bottom: 5px;
     margin-left: 0px;
+}
+main .web-link .material-icons{
+    font-size: 18px;
+    vertical-align: text-top;
 }
 main .web-content{
     font-size: 12px;
@@ -152,32 +164,30 @@ main .web-search-bar button[type="submit"]{
 }
 main .web-url-container{
     margin-bottom: 20px;
-
 }
 main .web-url-box{
      width: 250px;
      display: inline-block;
      margin: 10px 25px;
- }
- main .ask-box{
+}
+main .ask-box{
      border-width: 1px;
      border-style: solid;
      border-color: aquamarine;
+     border-radius: 10px;
+}
+main .also-ask{
+     font-size: 18px;
+     padding: 8px 15px;
  }
- main .also-ask{
-     font-size: 20px;
-     padding: 10px;
- }
-
 main .question{
     border-top-color: aquamarine;
     border-top-width: 1px;
     border-top-style: solid;
-    padding: 5px;
-    padding-left: 10px;
+    padding: 8px 15px 8px 15px;
     color: black;
 }
-main .question button{
+main .question .material-icons{
     float: right;
 }
 main .feedback-link{
@@ -212,26 +222,21 @@ main .twitt-box{
 main .twitt-upload-time{
     position: absolute;
     bottom: 10px;
-
 }
 main .twitt-box .link{
     color: darkcyan;
 }
 main .view-on-twitter{
-    display: block;
     font-size: 12px;
     color: blue;
     margin: 0 15px 40px 15px;
-    height: 20px;
+}
+main .view-on-twitter .material-icons{
+    font-size: 22px;
+    vertical-align: middle;
 }
 main .view-on-twitter span{
     padding-left: 8px;
-}
-main .view-on-twitter button{
-    width: 30px;
-    height: 20px;
-    float:left;
-    color: blue;
 }
 main .searches-related-box{
     margin: 25px 5px 30px 20px;
@@ -295,7 +300,7 @@ main .web-description:hover,
 main .feedback-link:hover{
     text-decoration: underline;
 }
-main .question button:hover{
+main .question:hover{
     cursor: pointer;
 }
 main .twitt-box .link:hover,
@@ -316,7 +321,6 @@ main{
 main .main-container{
     display: inline-block;
 }
-
 /*aside*/
 aside{
     position: absolute;
@@ -329,19 +333,20 @@ aside .wikipedia-article{
     border-width: 1px;
     border-style: solid;
     border-color: aquamarine;
-    padding: 0px 15px;
+    border-radius: 10px;
 }
 aside .wikipedia-article .container{
     padding-top: 60px;
-    width: 280px;
+    width: 270px;
     margin: 0;
 }
 aside .wikipedia-heading .material-icons{
     float: right;
 }
 aside .wikipedia-heading{
+    padding-left: 15px;
     position: relative;
-    height: 170px;
+    height: 160px;
 }
 aside img[src="images/github-icon.png"]{
     position: absolute;
@@ -364,15 +369,14 @@ aside .wikipedia-link{
     border-top-color: aquamarine;
     border-top-width: 1px;
     border-top-style: solid;
-    padding-top: 10px;
-    padding-bottom: 10px;
-
+    padding: 10px 10px;
 }
 aside .wikipedia-content{
     border-top-color: aquamarine;
     border-top-width: 1px;
     border-top-style: solid;
     align-content: left;
+    padding: 15px 15px;
 }
 aside .link{
     color:blue;
@@ -381,29 +385,41 @@ aside .information{
     font-size: 12px;
     padding-top: 5px;
     padding-bottom: 5px;
-
+}
+aside .information-container{
+    margin-bottom: 15px;
 }
 aside .people-also{
     color:black;
     display: inline;
 }
 aside .view-more{
+    font-size: 12px;
     float: right;
 }
 aside .other-websites-container{
-   padding-top: 5x;
+   margin-top: 5px;
+   padding-top: 5px;
    padding-bottom: 10px;
    font-size: 12px;
 }
 aside .another-website-box{
     display: inline-block;
-    width: 85px;
+    width: 80px;
+}
+aside .another-website-box img{
+    vertical-align: middle;
+}
+aside .another-website-box .link{
+    margin-top: 10px;
 }
 aside .disclaimer{
+    margin: 5px 15px;
     display: inline;
     font-size: 12px;
 }
 aside .feedback{
+    margin-right: 15px;
     float: right;
     font-size: 12px;
 }
@@ -440,8 +456,44 @@ footer .location{
 footer .location .material-icons{
     font-size: 12px;
     padding-right: 3px;
-    color: red;
+    color: blue;
 }
 footer li{
     padding-right: 10px;
+}
+@media only screen and (max-width: 800px){
+    
+    header input{
+        width: 80% !important;
+        margin: 5px !important;
+    }
+    header .search-box button{
+        margin-top: -45px !important;
+        margin-left: 190px !important;
+    }
+    .web-search-bar,
+    .main-container{
+        width: 100% !important;
+        margin: 0 !important; 
+    }
+    .web-search-bar input{
+        width: 82% !important;
+    }
+    li{
+        margin-left: 0 !important;
+        margin-right: 0 !important;
+    }
+    .location,
+    .right-navbar,
+    .twitts-container,
+    .nav-icons,
+    aside{
+        display: none;
+    }
+    .country{
+        margin-left: 0px !important;
+    }
+    footer .row{
+        padding: 8px;
+    }
 }
